lessons/066-kubernetes-network-policy-examples-tutorial-eks-calico-isolate-namespaces-pods-ip-blocks/k8s/3-production-ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: production
  labels:
    env: production
