lessons/066-kubernetes-network-policy-examples-tutorial-eks-calico-isolate-namespaces-pods-ip-blocks/k8s/2-service-b.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-b
  namespace: staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-b
  template:
    metadata:
      labels:
        app: service-b
    spec:
      containers:
      - name: service-b
        image: busybox:1.33.1
        command: ["nc", "-lkv", "-p", "8080", "-e", "/bin/sh"]
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: service-b
  namespace: staging
spec:
  type: ClusterIP
  selector:
    app: service-b
  ports:
  - port: 8080
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-service-b
  namespace: staging
spec:
  podSelector:
    matchLabels:
      app: service-b
  ingress:
  - from:
    - podSelector:
        matchLabels:
          access: service-b
