lessons/066-kubernetes-network-policy-examples-tutorial-eks-calico-isolate-namespaces-pods-ip-blocks/k8s/5-default-deny-all.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: production
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
